Set a fixed height for NoteSection, PreviousNoteSection, and SearchSection. Made Seach Section a flexbox container. Gave PreviousNotesSection and SearchSection the overflow-y: auto property.

--- a/src/App.css
+++ b/src/App.css
@@ -74,22 +74,24 @@ li:hover {
 
 .NoteSection {
     grid-area: notes;
+    height: 80vh;
 }
 
 .PreviousNotesSection {
     grid-area: prevNotes;
     border-right: 2px solid lightblue;
-}
-
-.SearchForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 80vh;
+    overflow-y: auto;
 }
 
 .SearchSection {
     grid-area: search;
     border-left: 2px solid lightblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 80vh;
+    overflow-y: auto;
 }
 
 .SectionName {
